--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav m-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" href="#">Home</a>
+                <a class="nav-link active" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Accessories</a>
@@ -56,7 +56,7 @@
                 <a class="nav-link" href="#">Category</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Shop</a>
+                <a class="nav-link" href="shop.html">Shop</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">About Us</a>
@@ -1322,7 +1322,7 @@
       <div class="row">
         <div class="col-lg-3">
           <div class="logo-details">
-            <img src="images/logo.png" alt="footer-logo">
+            <img src="images/logo-white.png" alt="footer-logo">
             <p>
               Calista Wise 7292 Disctum Av.
               New York.USA
