--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <a class="nav-link" href="shop.html">Shop</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About Us</a>
+                <a class="nav-link" href="about.html">About Us</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Faqs</a>
