--- a/shop.html
+++ b/shop.html
@@ -59,7 +59,7 @@
                 <a class="nav-link" href="#">Shop</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About Us</a>
+                <a class="nav-link" href="about.html">About Us</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Faqs</a>
@@ -382,7 +382,7 @@
       <div class="row">
         <div class="col-lg-3">
           <div class="logo-details">
-            <img src="images/logo-white.png" alt="footer-logo">
+            <a href="index.html"><img src="images/logo-white.png" alt="footer-logo"></a>
             <p>
               Calista Wise 7292 Disctum Av.
               New York.USA
