added tree section on about page

--- a/about.html
+++ b/about.html
@@ -124,7 +124,83 @@
         </div>
       </div>
     </section>  
-    <!-- founder section ends -->  
+    <!-- founder section ends -->
+    <!-- tree section starts -->
+    <section id="tree">
+      <div class="container">
+        <div class="background">
+          <img src="images/tree-bg.png" alt="tree" class="t-bg">
+          <div class="row">
+            <div class="col-lg-3">
+              <div class="tree-item">
+                <div class="item-image">
+                  <img src="images/tree-1.png" alt="tree-bg" class="one">
+                  <div class="second-image">
+                    <img src="images/100.png" alt="100" class="tree-one">
+                  </div>
+                </div>
+                <div class="tree-item-text">
+                  <h3>100% Natural</h3>
+                  <p>
+                    Donec sollicitudin molestie malesuada. Lorem ipsum dolor sit amet,consectetur.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="tree-item">
+                <div class="item-image">
+                  <img src="images/tree-2.png" alt="tree2-bg" class="two">
+                  <div class="second-image-2">
+                    <img src="images/healthy-food.png" alt="healthy-food" class="tree-two">
+                  </div>
+                </div>
+                <div class="tree-item-text-2">
+                  <h3>Fresh Vegetables</h3>
+                  <p>
+                    Donec sollicitudin molestie malesuada. Lorem ipsum dolor sit amet,consectetur.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="tree-item">
+                <div class="item-image">
+                  <img src="images/tree-1.png" alt="tree-bg" class="three">
+                  <div class="second-image-3">
+                    <img src="images/organic-food.png" alt="organic-food" class="tree-three">
+                  </div>
+                </div>
+                <div class="tree-item-text">
+                  <h3>Organic Farming</h3>
+                  <p>
+                    Donec sollicitudin molestie malesuada. Lorem ipsum dolor sit amet,consectetur.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="tree-item">
+                <div class="item-image">
+                  <img src="images/tree-1.png" alt="tree-bg" class="four">
+                  <div class="second-image-4">
+                    <img src="images/healthy.png" alt="healthy" class="tree-four">
+                  </div>
+                </div>
+                <div class="tree-item-text-3">
+                  <h3>Super Healthy</h3>
+                  <p>
+                    Donec sollicitudin molestie malesuada. Lorem ipsum dolor sit amet,consectetur.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+      
+    <!-- tree section ends -->  
   
   <!-- footer section starts -->
   <footer>
