added category section

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                 <a class="nav-link" href="#">Accessories</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Category</a>
+                <a class="nav-link" href="category.html">Category</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="shop.html">Shop</a>
