completed category page & added search page

--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
                   <i class="fa-solid fa-bag-shopping"></i>
                   <div class="ct-notify position-absolute d-flex flex-column justify-content-center align-items-center">3</div>
                 </a>
-                <a href="#" class="search"><i class="fa-solid fa-magnifying-glass"></i></a>
+                <a href="search.html" class="search"><i class="fa-solid fa-magnifying-glass"></i></a>
             </div>
           </div>
         </div>
