--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <a class="nav-link" href="#">Accessories</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Category</a>
+                <a class="nav-link" href="category.html">Category</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="shop.html">Shop</a>
@@ -70,7 +70,7 @@
                   <i class="fa-solid fa-bag-shopping"></i>
                   <div class="ct-notify position-absolute d-flex flex-column justify-content-center align-items-center">3</div>
                 </a>
-                <a href="#" class="search"><i class="fa-solid fa-magnifying-glass"></i></a>
+                <a href="search.html" class="search"><i class="fa-solid fa-magnifying-glass"></i></a>
             </div>
           </div>
         </div>
