--- a/search.html
+++ b/search.html
@@ -85,8 +85,8 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="home-shop-text">
-              <h3>Shop Category</h3>
-              <p>Home-Shop Category</p>
+              <h3>Search</h3>
+              <p>Home-Search result</p>
             </div>
           </div>
         </div>
@@ -96,6 +96,8 @@
     <!-- cat-search section starts -->
       <section id="cat-search">
         <div class="container">
+          <h3>Search  "Fruits" 10 result has been found.</h3>
+          <p>Suggestion : Fruits</p>
           <div class="row">
             <div class="col-lg-4">
               <div class="left-search">
@@ -105,12 +107,12 @@
                 </form>
               </div>
             </div>
-            <div class="col-lg-3">
+            <!-- <div class="col-lg-3">
               <div class="middle-search">
                 <p>Showing 1-15 of 30 results</p>
               </div>
-            </div>
-            <div class="col-lg-4 offset-1">
+            </div> -->
+            <div class="col-lg-4">
               <div class="right-search">
                 <div class="icons">
                   <img src="images/dots.png" alt="dots">
@@ -463,12 +465,6 @@
                       </div>
                     </div>
                   </div>
-                </div>
-                <div class="paginasion">
-                  <a href="#">1</a>
-                  <a href="#">2</a>
-                  <a href="#">3</a>
-                  <a href="#"><i class="fa-solid fa-angle-right"></i></a>
                 </div>
               </div>
             </div>
