fix selling section on home page

--- a/search.html
+++ b/search.html
@@ -94,41 +94,17 @@
     </section>
     <!-- home-shop section ends -->
     <!-- cat-search section starts -->
-      <section id="cat-search">
+      <section id="cat-search-1">
         <div class="container">
           <h3>Search  "Fruits" 10 result has been found.</h3>
           <p>Suggestion : Fruits</p>
           <div class="row">
             <div class="col-lg-4">
-              <div class="left-search">
-                <form>
-                  <input type="text" placeholder="search products">
-                  <i class="fa-solid fa-magnifying-glass"></i>
-                </form>
+              <div class="result">
+                <span>Sort By :</span>
               </div>
-            </div>
-            <!-- <div class="col-lg-3">
-              <div class="middle-search">
-                <p>Showing 1-15 of 30 results</p>
-              </div>
-            </div> -->
-            <div class="col-lg-4">
-              <div class="right-search">
-                <div class="icons">
-                  <img src="images/dots.png" alt="dots">
-                  <img src="images/list.png" alt="list" class="list">
-                  <!-- <i class="fa-solid fa-list-ul"></i> -->
-                </div>
-                <div class="right-field">
-                  <select class="form-select" aria-label="Default select example">
-                    <option selected>Sort by latest</option>
-                    <option value="1">Sort by oldest</option>
-                    <option value="2">Sort by name</option>
-                    <option value="3">Sort by date</option>
-                  </select>
-                </div>
-              </div>
-            </div>
+            </div> 
+           
           </div>
         </div>
       </section>
